--- a/index.html
+++ b/index.html
@@ -4,55 +4,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Aplicacion de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!--Conexion con el CSS-->
+    <link rel="stylesheet" href="style.css">
+    <!--Titulo de Empresa-->
     <title>Cantera Pierdra de Agua</title>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">PIEDRA DE AGUA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">PRODUCTOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
+<body class="theme-color-1">
+    <!--Inicio de Header-->
+    <header>
+        <!--Barra de Navegacion-->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">PIEDRA DE AGUA</a>
+                <!-- barra de extension de opciones-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- fin barra de extension de opciones-->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contactanos</a>
+                        </li>
                     </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                    <!--Carrito de compras-->
+                    <div class="shopping-cart" id="shopping-cart">
+                        <i class="bi bi-cart-plus"></i>
+                        <span class="badge" id="cart-count"></span>
+                    </div>
+                    <!--Fin de carrito-->
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--Fin de Header-->
+
+    <!-- Inicio de Cuerpo -->
+    <section class="section-products-shop">
+        <div class="container">
+            <div id="tab-4" class="tab-content active default" style="display: block;">
+                <div class="game-product product-m no-slider row">
+                    <div class="product-box">
+                        <div class="img-wrapper">
+                                <div class="front">
+                                    <a href="#linkdewebunicadecompra"
+                                        class="bg-size blur-up lazyloaded"></a>
+                                    <img src="src/views/img/arena-amarilla.webp" alt="arena-amarilla">
+                                </div>
+                                <div class="cart-info cart-wrap">
+                                    <a href="#url de la imagen" title="verproducto" tabindex="0">
+                                        <i class="bi bi-search" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+                                <div class="add-button" data-bs-toggle="modal"
+                                    data-bs-target="#addtocart" id="arena-amarilla"
+                                    alt="arena-amarilla">
+                                    agregar al carro
+                                </div>
+                        </div>
+                        <div class="product-detail">
+                            <div class="rating">
+                                <a href="#">
+                                    <p class="h6">
+                                        Arena Amarilla
+                                    </p>
+                                </a>
+                                <p class="h4">
+                                    <span style="font-weight: normal;
+                                        font-size: 12 px;
+                                        text-transform: lowercase;
+                                        display: inline-block;
+                                        color: red;
+                                        vertical-align: middle;">
+                                        desde
+                                    </span>
+                                    "s/ 21.00"
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
+    </section>
+    <!-- Fin de Cuerpo -->
 
-    
+    <!--Inicio de Footer-->
+    <footer>
+        <nav class="navbar sticky-top bg-body-tertiary">
+            <div class="container-fluid">
+                <ul class="nav jutify-content-center">
+                    <li class="nav-item">
+                        <p class="h1">NOSOTROS</p>
+                        <p class="h4">Cantera Piura encargada de la <br>
+                            Distribucion y Extraccion de materiales</p>
+                        <br>
+                        <img src="./src/views/img/Logo_PiedradeAgua.webp" alt="Logo_PiedradeAgua" width="200px"
+                            height="auto">
+                    </li>
+                    <li class="nav-item">
+                        <p class="h1">UBICANOS EN:</p>
 
+                    </li>
+                    <li class="nav-item">
+                        <p class="h1">CONOCENOS</p>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
+    <!--Fin de Header-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
